@@ -2,6 +2,7 @@ package io.github.chenyilei2016.maintain.manager.pojo.repository.impl;
 
 import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
 import com.baomidou.mybatisplus.core.metadata.IPage;
+import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
 import io.github.chenyilei2016.maintain.manager.pojo.converter.ScriptExecutionHistoryConverter;
 import io.github.chenyilei2016.maintain.manager.pojo.dataobject.ScriptExecutionHistoryDO;
@@ -9,9 +10,6 @@ import io.github.chenyilei2016.maintain.manager.pojo.entity.ScriptExecutionHisto
 import io.github.chenyilei2016.maintain.manager.pojo.mapper.ScriptExecutionHistoryMapper;
 import io.github.chenyilei2016.maintain.manager.pojo.repository.ScriptExecutionHistoryRepository;
 import org.springframework.stereotype.Repository;
-
-import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * 脚本执行历史 仓库实现类
@@ -23,19 +21,16 @@ import java.util.stream.Collectors;
 public class ScriptExecutionHistoryRepositoryImpl extends ServiceImpl<ScriptExecutionHistoryMapper, ScriptExecutionHistoryDO> implements ScriptExecutionHistoryRepository {
 
     @Override
-    public IPage<ScriptExecutionHistoryEntity> page(IPage page, QueryWrapper<ScriptExecutionHistoryDO> queryWrapper) {
-        long total = baseMapper.selectCount(queryWrapper); // Simplified count
-        if (total == 0) {
-            return page;
-        }
-
-        List<ScriptExecutionHistoryDO> records = baseMapper.selectList(page, queryWrapper);
-        List<ScriptExecutionHistoryEntity> entityRecords = records.stream()
+    public IPage<ScriptExecutionHistoryEntity> page(
+            Page<ScriptExecutionHistoryEntity> page,
+            QueryWrapper<ScriptExecutionHistoryDO> queryWrapper
+    ) {
+        Page<ScriptExecutionHistoryDO> dataPage = baseMapper.selectPage(
+                new Page<>(page.getCurrent(), page.getSize()), queryWrapper);
+        page.setRecords(dataPage.getRecords().stream()
                 .map(ScriptExecutionHistoryConverter.INSTANCE::toEntity)
-                .collect(Collectors.toList());
-
-        page.setRecords(entityRecords);
-        page.setTotal(total);
+                .toList());
+        page.setTotal(dataPage.getTotal());
         return page;
     }
 
